<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" 
            xmlns:android="http://schemas.android.com/apk/res/android">
            
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="vertical" 
    android:scrollbarAlwaysDrawVerticalTrack="true" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cate" /> 

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />
    <DatePicker
        android:id="@+id/dateExpense2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail" />
    
    <EditText 
        android:id="@+id/editTextDetail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <requestFocus />
        </EditText>
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value" />

     <EditText
         android:id="@+id/editTextValue2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="number" >

     </EditText>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
        
     <Button
         android:id="@+id/save_button2"
         style="@style/ButtonText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@drawable/btn_blue_matte"
         android:text="@string/save" />
     
     <Button 
         android:id="@+id/cancel_button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/cancel"
         style="@style/ButtonText2"
         android:background="@drawable/btn_white_matte"  />
     
     </LinearLayout>
</LinearLayout>
</ScrollView>