<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >
            
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="155dp"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="true"
            android:gravity="center|bottom"
            android:measureWithLargestChild="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/income_button"
                style="@style/ButtonText"
                android:layout_width="134dp"
                android:layout_height="120dp"
                android:background="@drawable/btn_green_matte"
                android:drawableTop="@drawable/income"
                android:onClick="@string/income"
                android:text="@string/income" />

            <Button
                android:id="@+id/expense_button"
                style="@style/ButtonText"
                android:layout_width="134dp"
                android:layout_height="120dp"
                android:background="@drawable/btn_red_matte"
                android:drawableTop="@drawable/expense"
                android:text="@string/expense" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/chart_button"
                style="@style/ButtonText"
                android:layout_width="134dp"
                android:layout_height="120dp"
                android:background="@drawable/btn_orange_matte"
                android:drawableTop="@drawable/graph1"
                android:onClick="@string/chart"
                android:text="@string/chart" />

            <Button
                android:id="@+id/topex"
                style="@style/ButtonText"
                android:layout_width="134dp"
                android:layout_height="120dp"
                android:background="@drawable/btn_blue_matte"
                android:drawableTop="@drawable/bid"
                android:text="@string/top" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            style="@style/Today"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:drawableTop="@drawable/today" />

        <TableLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView02"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:gravity="center_vertical"
                    android:text="Income:" />

                <TextView
                    android:id="@+id/sumIncome"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="N" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView04"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:gravity="center_vertical"
                    android:text="Necessary Expense:" />

                <TextView
                    android:id="@+id/sumExpenseNe"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="N" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView07"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="Unnecessary Expense:" />

                <TextView
                    android:id="@+id/sumExpenseUn"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="N" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView10"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:gravity="center_vertical"
                    android:text="Other Expense:" />

                <TextView
                    android:id="@+id/sumExpenseOt"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="N" />

            </TableRow>

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView11"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:gravity="center_vertical"
                    android:text="Current Balance:" />

                <TextView
                    android:id="@+id/Remain"
                    style="@style/Mainpage"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="N" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
            